fixed alignment of elements in list

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.top-text {
+  margin-top: 60px;
+  text-align: center;
+}
+.items-wrap {
+  margin: 20px auto 0px auto;
+}
 .items {
   padding: 20px;
 }
